# obspp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build_metal.sh  buildspec.json  context.h  context.mm  cute_log.txt  debug.plist  logger.cpp  macros.h  main.cpp  op_base.h  op_base.mm  op_flip.h  op_flip.mm  property.h  tensor.h  tensor.mm  vcpkg.json
base/: base_export.h  context.h  context.hpp  context.mm  logger.cpp  logger.h  logger.hpp  macros.h  macros.hpp  platform.hpp  tensor.h  tensor.hpp  tensor.mm  types.h  types.hpp
cmake/: metal.cmake
nn/: net.hpp  op_base.cpp  op_base.h  op_base.hpp  op_base.mm  op_flip.cpp  op_flip.h  op_flip.metal  op_flip.mm  op_flip_unittest.cpp  op_softmax.cpp  op_softmax.h  op_softmax.hpp  op_softmax.metal  op_softmax.mm  op_softmax_unittest.cpp  op_utils.h  op_utils.mm  property.h  softmax_impl.hpp  softmax_impl_cpu.cpp  softmax_impl_cuda.cu  types.h  types.hpp
shader/: flip.metal  grayscale.metal
testing/: cutenn_test_main.cpp  cutenn_test_main.mm
tools/: build-metallib.py  codesign.sh
